--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-  "name": "V2ray简易部署",
-  "description": "Deploy V2ray to Heroku.",
-  "keywords": ["V2ray"],
+  "name": "StopDrug简易部署",
+  "description": "Deploy StopDrug to Heroku.",
+  "keywords": ["StopDrug"],
   "env": {
     "AppName": {
        "description": "请输入最上方填写的App Name，用于生成二维码和订阅链接，如果不想生成输入no",
        "value": "no"
      },
     "VER": {
-       "description": "默认latest安装最新版本V2Ray （输入V2Ray 版本号 进行指定版本安装。例如：3.22)",
+       "description": "默认latest安装最新版本StopDrug （输入StopDrug 版本号 进行指定版本安装。例如：3.22)",
        "value": "latest"
      }, 
     "UUID": {
